--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("assets/libraries/hover-min.css");
+@import url('assets/libraries/hover-min.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -54,10 +54,9 @@ body {
   color: black;
   font-size: 20px;
 }
-#navbar .active-tab {
-  border: solid 2px black;
+#navbar .nav-link:hover {
+  color: rgb(121, 121, 121);
 }
-
 /* Jumbotron */
 #jumbotron {
   background-color: transparent;
@@ -101,8 +100,7 @@ body {
   width: 70px;
   height: 70px;
   color: black;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-border-radius: 20%;
   -moz-border-radius: 20%;
   -ms-border-radius: 20%;
@@ -139,13 +137,13 @@ body {
 }
 #projects .project-card {
   width: 100%;
-  height: 500px;
+  height: 400px;
 }
 #projects .featured-card-img {
-  height: 500px;
+  height: 400px;
 }
 #projects .featured-card-info {
-  height: 500px;
+  height: 400px;
 }
 #projects .project-card-info {
   background-color: rgb(97, 97, 97);
@@ -340,4 +338,4 @@ body {
 #footer .contact-link-button:hover {
   color: black;
   background-color: white;
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
