--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('assets/libraries/hover-min.css');
+@import url("assets/libraries/hover-min.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -137,13 +137,13 @@ body {
 }
 #projects .project-card {
   width: 100%;
-  height: 400px;
+  height: 500px;
 }
 #projects .featured-card-img {
-  height: 400px;
+  height: 500px;
 }
 #projects .featured-card-info {
-  height: 400px;
+  height: 500px;
 }
 #projects .project-card-info {
   background-color: rgb(97, 97, 97);
@@ -338,4 +338,4 @@ body {
 #footer .contact-link-button:hover {
   color: black;
   background-color: white;
-} /*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
