--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ body {
 
 /* Projects */
 #projects {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 #projects .project-card {
   width: 100%;
@@ -142,6 +142,12 @@ body {
 }
 #projects .featured-card-img {
   height: 500px;
+  border: 1px;
+}
+#projects .featured-project-card {
+  border: 20px solid rgb(242, 242, 242);
+  background-color: rgb(228, 228, 228);
+  color: black;
 }
 #projects .project-card-info {
   background-color: rgb(97, 97, 97);
